src/test/deca/context/valid/fields/selection_on_new_object.deca
// Description :
//    Sélection de champ sur un objet créé avec new.
//
// Resultats :
//    OK

class A {
    public int x;
}

{
    println((new A()).x);
}

